Added swagger docs for UpdateProfilePicture
