# docs/swagger.yaml
@@ -323,6 +323,28 @@ paths:
       summary: Signs Up a User
       tags:
       - users
+  /update_user_picture:
+    patch:
+      description: Send a patch request containing a file to be updated and receives
+        a response of its url path after upload.
+      parameters:
+      - description: image
+        in: formData
+        name: os.File
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.UserResponse'
+      security:
+      - BearerAuth: []
+      summary: Updates a User profile picture image
+      tags:
+      - Update-User-Profile
 schemes:
 - https
 securityDefinitions:
